Update PACER documentation to version 1.1, including changes to specifications, evidence pack, FAQ, field manual, and quickstart. Introduced new machine-readable JSON and YAML files for AI/LLM optimization, and updated references throughout the documentation to reflect the new version. Enhanced operational guidelines and command patterns for improved usability.

--- a/docs/pacer/pacer-machine.yaml
+++ b/docs/pacer/pacer-machine.yaml
@@ -1,7 +1,7 @@
-pacer_version: '1.0'
-generated_at: '2025-09-24T03:54:18.525581Z'
+pacer_version: '1.1'
+generated_at: '2025-01-27T00:00:00Z'
 spec_refs:
-  spec: pacer-spec.md
+  spec: pacer-spec-v1.md
   field_manual: pacer-field-manual.md
   quickstart: pacer-quickstart.md
   rationale: pacer-rationale.md
